load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/findyourpaths/chromedp
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "go_default_library",
    srcs = [
        "allocate.go",
        "allocate_linux.go",
        "allocate_other.go",
        "browser.go",
        "call.go",
        "chromedp.go",
        "conn.go",
        "emulate.go",
        "errors.go",
        "eval.go",
        "input.go",
        "js.go",
        "nav.go",
        "poll.go",
        "query.go",
        "screenshot.go",
        "target.go",
        "util.go",
    ],
    embedsrcs = [
        "js/attribute.js",
        "js/blur.js",
        "js/getClientRect.js",
        "js/reset.js",
        "js/setAttribute.js",
        "js/submit.js",
        "js/text.js",
        "js/textContent.js",
        "js/visible.js",
        "js/waitForPredicatePageFunction.js",
    ],
    importpath = "github.com/findyourpaths/chromedp",
    visibility = ["//visibility:public"],
    deps = [
        "//device:go_default_library",
        "//kb:go_default_library",
        "@com_github_chromedp_cdproto//:go_default_library",
        "@com_github_chromedp_cdproto//browser:go_default_library",
        "@com_github_chromedp_cdproto//cdp:go_default_library",
        "@com_github_chromedp_cdproto//css:go_default_library",
        "@com_github_chromedp_cdproto//dom:go_default_library",
        "@com_github_chromedp_cdproto//emulation:go_default_library",
        "@com_github_chromedp_cdproto//input:go_default_library",
        "@com_github_chromedp_cdproto//inspector:go_default_library",
        "@com_github_chromedp_cdproto//log:go_default_library",
        "@com_github_chromedp_cdproto//network:go_default_library",
        "@com_github_chromedp_cdproto//page:go_default_library",
        "@com_github_chromedp_cdproto//runtime:go_default_library",
        "@com_github_chromedp_cdproto//target:go_default_library",
        "@com_github_gobwas_ws//:go_default_library",
        "@com_github_gobwas_ws//wsutil:go_default_library",
        "@com_github_mailru_easyjson//:go_default_library",
        "@com_github_mailru_easyjson//jlexer:go_default_library",
        "@com_github_mailru_easyjson//jwriter:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "allocate_test.go",
        "chromedp_test.go",
        "emulate_test.go",
        "eval_test.go",
        "event_test.go",
        "example_test.go",
        "input_test.go",
        "nav_test.go",
        "poll_test.go",
        "query_test.go",
        "screenshot_test.go",
        "util_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//device:go_default_library",
        "//kb:go_default_library",
        "@com_github_chromedp_cdproto//browser:go_default_library",
        "@com_github_chromedp_cdproto//cdp:go_default_library",
        "@com_github_chromedp_cdproto//css:go_default_library",
        "@com_github_chromedp_cdproto//dom:go_default_library",
        "@com_github_chromedp_cdproto//input:go_default_library",
        "@com_github_chromedp_cdproto//network:go_default_library",
        "@com_github_chromedp_cdproto//page:go_default_library",
        "@com_github_chromedp_cdproto//runtime:go_default_library",
        "@com_github_chromedp_cdproto//target:go_default_library",
        "@com_github_ledongthuc_pdf//:go_default_library",
        "@com_github_orisano_pixelmatch//:go_default_library",
    ],
)
